--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "js-yaml": "3.14.1"
   },
   "devDependencies": {
+    "@vercel/ncc": "^0.34.0",
     "@types/jest": "27.0.3",
     "@types/js-yaml": "3.12.7",
     "@types/node": "14.18.0",
