--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
   "dependencies": {
     "@actions/core": "1.6.0",
     "@actions/github": "2.2.0",
-    "js-yaml": "3.14.1"
+    "js-yaml": "3.14.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.34.0",
     "@types/jest": "27.0.3",
     "@types/js-yaml": "3.12.7",
     "@types/node": "14.18.0",
     "@typescript-eslint/parser": "5.10.0",
+    "@vercel/ncc": "^0.34.0",
     "@zeit/ncc": "0.22.3",
     "eslint": "8.7.0",
     "eslint-plugin-github": "2.0.0",
